# Web_microphone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audio.html  index_ap.html  index_ap1.html  mypartitions.csv  paths.sh  sdkconfig
main/: CMakeLists.txt  wifi_apsta_main.c
spiffs/: audio_html.h  favicon_ico.h  index_ap1_html.h  index_ap_html.h
